[package]
name = "cavegen"
version = "0.1.0"
authors = ["whit <wfackler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
rand = "0.7.3"
rand_derive = "0.5"
rusqlite = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
table = "0.4.0"
toml = "0.5.6"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]

